css/main.css
html, body {
  background-color: var(--bg);
  font-family: var(--ff);
}

header {
  padding: var(--size-400) 0 var(--size-300);
}
header .logo {
  width: var(--size-900);
}

section {
  width: 100%;
  height: 100%;
}

section.content {
  display: grid;
  gap: 0.3em;
}
section.content textarea {
  width: 100%;
  border: 1px solid var(--blue-500);
  padding: var(--size-200);
  resize: none;
}
section.content .actions {
  display: grid;
  gap: var(--size-200);
}

section.results {
  padding-bottom: var(--size-800);
}

.btn {
  display: inline;
  border: 1px solid var(--blue-500);
  border-radius: var(--size-200);
  padding: 0.25em 1em;
  transition: transform 0.2s ease-in-out;
}
.btn:hover, .btn:focus, .btn:active {
  cursor: pointer;
  border: 1px solid var(--blue-400);
  transform: scale(1.012);
}

.helper-text {
  display: flex;
  align-items: center;
}
.helper-text__glyph {
  width: 1.35rem;
}
.helper-text__glyph, .helper-text__message {
  display: inline-block;
  font-size: var(--fs-200);
  font-style: italic;
  padding: var(--size-100);
}

.result {
  height: 100%;
  border: 1px solid rgba(0, 0, 0, 0.25);
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
  padding: var(--size-300);
  margin-top: var(--size-300);
  background-color: var(--bg-white);
  border-radius: var(--size-300);
  display: grid;
  place-items: center;
}
.result__title {
  font-size: 1.2rem;
  font-weight: 700;
  text-align: center;
}
.result__text {
  text-align: center;
  font-size: smaller;
}
.result__hero {
  margin-inline: auto;
  display: none;
}
.result button {
  margin-top: var(--size-300);
  width: 80%;
}

.even-columns {
  gap: 1.5rem;
}

.container {
  --padding: var(--size-300);
  --max-width: 67rem;
  width: min(70rem, 100% - var(--padding) * 2);
  margin-inline: auto;
}

.even-columns {
  display: grid;
}

@media screen and (min-width: 26em) {
  .results .result__hero {
    display: block;
  }
  .content .actions {
    grid-auto-flow: column;
  }
}
@media screen and (min-width: 50em) {
  .even-columns {
    grid-auto-flow: column;
    place-items: center;
    gap: 5em;
  }
  .content {
    padding-top: 2rem;
  }
  .content .actions {
    padding-top: 1.3rem;
    grid-auto-flow: row;
  }
}
:root {
  --ff: "Open Sans", sans-serif;
  --fc-white: var(--bg-white);
  --bg: #f3f5fc;
  --bg-white: #fff;
  --blue-100: #e8f3fc;
  --blue-200: #356ea9;
  --blue-300: #0a3871;
  --blue-400: #072b61;
  --blue-500: #052051;
  --fs-100: 0.5rem;
  --fs-200: 0.75rem;
  --fs-300: 1rem;
  --fs-400: 1.25rem;
  --fs-500: 1.5rem;
  --fs-600: 2rem;
  --size-100: 0.25rem;
  --size-200: 0.5rem;
  --size-300: 1rem;
  --size-400: 1.5rem;
  --size-500: 2rem;
  --size-600: 2.5rem;
  --size-700: 3rem;
  --size-800: 3.5rem;
  --size-900: 4rem;
  --size-1000: 4.5rem;
}

.bg-blue-100,
.bg-blue {
  background-color: var(--blue-100);
}

.bg-blue-200 {
  background-color: var(--blue-200);
}

.bg-blue-300 {
  background-color: var(--blue-300);
}

.bg-blue-400 {
  background-color: var(--blue-400);
}

.bg-blue-500 {
  background-color: var(--blue-500);
}

.fc-white {
  color: var(--fc-white);
}

.unselectable {
  pointer-events: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -webkit-user-drag: none;
  -ms-user-select: none;
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role=list],
ol[role=list] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

body,
html {
  height: 100%;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
  max-width: 100%;
  display: block;
}

/* Remove all animations and transitions for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }
  *,
*::before,
*::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/*# sourceMappingURL=main.css.map */

